testdata/baselines/reference/submodule/conformance/overloadTag3.errors.txt
/a.js(14,9): error TS7006: Parameter 'value' implicitly has an 'any' type.


==== /a.js (1 errors) ====
    /**
     * @template T
     */
    export class Foo {
        /**
         * @constructor
         * @overload
         */
        constructor() { }
    
        /**
         * @param {T} value
         */
        bar(value) { }
            ~~~~~
!!! error TS7006: Parameter 'value' implicitly has an 'any' type.
    }
    
    /** @type {Foo<number>} */
    let foo;
    foo = new Foo();
    